compiler/w_session/tests/errors/if-elseless-return.w
fn main(a: u32, b: u32): u32 {
    if a {
        b
    }
}