compiler/w_session/tests/errors/if-elseless-return.stderr
tests/errors/if-elseless-return.w:5:1: error: branch must return void
}
^
